2013-11-27  Eric Botcazou  <ebotcazou@adacore.com>

	* var-tracking.c (track_expr_p): Do not track declarations for parts
	of tracked parameters.
	(add_stores): Do not track values for tracked parameters passed in
	multiple locations.
	(vt_get_decl_and_offset): Handle PARALLEL.
	(vt_add_function_parameter): Handle parameters with incoming PARALLEL.

2013-11-27  Jeff Law  <law@redhat.com>

	* tree-ssa-threadupdate.c (thread_through_all_blocks): Do not
	clobber the loop structure thread_block was unsuccessful.  If
	thread_block was unsuccessful, cleanup appropriately.

2013-11-27  Chen Liqin <liqin.gcc@gmail.com>

	* config/score/score.h (REG_CLASS_FROM_LETTER): Delete.
	(score_char_to_class): Likewise.

2013-11-27  Kenneth Zadeck  <zadeck@naturalbridge.com>

	* fold-const.c (int_const_binop_1): Make INT_MIN % -1 return 0 with the
	overflow bit set.

2013-11-27  Richard Biener  <rguenther@suse.de>

	PR middle-end/58723
	* cgraphbuild.c (build_cgraph_edges): Do not build edges
	for internal calls.
	(rebuild_cgraph_edges): Likewise.
	* ipa-inline-analysis.c (estimate_function_body_sizes):
	Skip internal calls.
	* tree-inline.c (estimate_num_insns): Estimate size of internal
	calls as 0.
	(gimple_expand_calls_inline): Do not try inline-expanding
	internal calls.
	* lto-streamer-in.c (input_cfg): Stream loop safelen,
	force_vect and simduid.
	(input_struct_function_base): Stream has_force_vect_loops
	and has_simduid_loops.
	(input_function): Adjust.
	* lto-streamer-out.c (output_cfg): Stream loop safelen,
	force_vect and simduid.
	(output_struct_function_base): Stream has_force_vect_loops
	and has_simduid_loops.

2013-11-27  Kai Tietz  <ktietz@redhat.com>

	* config/i386/winnt.c (i386_pe_section_type_flags): Use const
	pointer cast.

2013-11-27  Kugan Vivekanandarajah  <kuganv@linaro.org>

	* doc/tm.texi.in (TARGET_HAS_NO_HW_DIVIDE): Define.
	* doc/tm.texi (TARGET_HAS_NO_HW_DIVIDE): Regenerate.

2013-11-27  Marek Polacek  <polacek@redhat.com>

	PR sanitizer/59306